


add_subdirectory(base)
add_subdirectory(coost)
add_subdirectory(boost)
add_subdirectory(folly)
add_subdirectory(oatcpp)
add_subdirectory(concurrent)
add_subdirectory(testu)
# add_subdirectory(poco)
add_subdirectory(simpleasync)
add_subdirectory(container)
add_subdirectory(ceres)
add_subdirectory(stdexe)







