cmake_minimum_required(VERSION 3.22)
project(folly)

add_executable(syntype)
target_sources(syntype PUBLIC ${CMAKE_SOURCE_DIR}/src/folly/syntype.cpp)
target_compile_features(syntype PRIVATE cxx_std_20)
target_link_libraries(syntype PRIVATE CONAN_PKG::folly)

add_executable(datastruct)
target_sources(datastruct PUBLIC ${CMAKE_SOURCE_DIR}/src/folly/data_struct.cpp)
target_compile_features(datastruct PRIVATE cxx_std_20)
target_link_libraries(datastruct CONAN_PKG::folly)

add_executable(threadpool)
target_sources(threadpool PUBLIC ${CMAKE_SOURCE_DIR}/src/folly/threadpool.cpp)
target_compile_features(threadpool PRIVATE cxx_std_17)
# set_target_properties()
target_link_options(threadpool PRIVATE "-s")
set_target_properties(threadpool PROPERTIES DEBUG_POSTFIX "-d" )
target_link_libraries(threadpool CONAN_PKG::folly)
